# giblet-responses

./: .gitignore  .pre-commit-config.yaml  AUDIO_ENCODING_EXECUTIVE_SUMMARY.md  AUDIO_FIX_SUMMARY.md  AUDIT_COMPLETE.md  BATCH_3_COMPLETE.md  CLAUDE.md  CLUSTER_DEPLOYMENT_QUICK_START.md  COMPREHENSIVE_SESSION_SUMMARY.md  CONTRIBUTING.md  DATA_SETUP.md  DECODER_BEFORE_AFTER_COMPARISON.md  ENCODEC_E2E_TEST_SUMMARY.md  ENCODEC_IMPLEMENTATION_COMPLETE.md  ENCODER_ARCHITECTURE_UPDATE.md  ENCODER_FIX_SUMMARY.md  ENVIRONMENT_SETUP.md  FINAL_AUTONOMOUS_SESSION_REPORT.md  FINAL_SESSION_SUMMARY.md  README.md  REVIEW_THIS_FIRST.md  SESSION_END_STATUS.md  STATUS.md  VALIDATION_IMPLEMENTATION_SUMMARY.md  check_layer_sizes.py  cluster_train_config.yaml  compress_nii.sh  demo_decoder.py  download_data.sh  download_data_from_dropbox.sh  monitor_and_package.sh  package_for_dropbox.sh  pyproject.toml  pytest.ini  reproduce_encodec_bug.py  requirements.txt  requirements_conda.txt  requirements_py311.txt  run_giblet.sh  setup_environment.sh  (+32 more)
cluster_config/: README.md
docs/: ENCODEC_INTEGRATION_SUMMARY.md  ENCODEC_QUICK_REFERENCE.md  encodec_audio_encoder_update.md
encodec_parameter_sweep/: ANALYSIS_SUMMARY.md  encodec_parameter_comparison.csv  encodec_parameter_comparison.md
encodec_test_outputs/: SUMMARY.md  metrics_report.txt
evaluation/: EXECUTIVE_SUMMARY.md  README.md  VISUALIZATION_LIBRARY_COMPARISON.md  create_architecture_diagram.py  library_comparison.csv  test_visualization_libraries.py
examples/: QUICKSTART.md  README.md  README_VALIDATION.md  create_network_diagram.py  demo_decoder.py  demo_sync.py  encodec_audio_encoder_demo.py  generate_network_diagram.py  hrf_convolution_example.py  train_config.yaml  train_example.py  validate_all_modalities.py  validate_audio.py  validate_fmri.py  validate_text.py  validate_video.py  video_temporal_concatenation_demo.py  visualize_autoencoder_plotneuralnet.py  visualize_autoencoder_torchview.py
experiments/: test_real_dataset_video_encoder.py  test_video_encoder_linear.py
notes/: 2025-10-29_encoder_implementation.md  2025-10-29_repository_cleanup.md  2025-10-31_encodec_parameter_evaluation.md  2025-11-02_issue28_encodec_fix.md  2025-11-02_issue29_complete_issue30_opened.md  2025-11-02_session_summary.md  2025-11-03_ANALYSIS_INDEX.md  2025-11-03_issue30_ddp_memory_optimizations.md  2025-11-03_issue31_phase5_test_analysis.md  2025-11-03_issue31_phases2-4_complete.md  2025-11-03_test_file_inventory.txt  2025-11-03_test_suite_issues_tracking.csv  2025-11-04_issue31_phase5_test_failures.md  2025-11-04_phase5_next_steps.md  2025-11-04_session_issue31_continued.md  2025-11-04_session_issue31_phase5_part2.md  ARCHITECTURE_ANALYSIS.md  ARCHITECTURE_AUDIT.md  ARCHITECTURE_AUDIT_INDEX.md  ARCHITECTURE_COMPARISON.csv  AUDIO_ENCODING_ISSUE23_POST.md  AUDIT_RESULTS.txt  (+101 more)
(+125 files in other folders)
